changed css to always display the browser scrollbar, preventing the navbar shift when selecting a cvSection too long for one screen

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body {
     /* background-image: linear-gradient(-90deg, gainsboro, white, gainsboro); */
     background-color: rgba(245, 245, 245, 0.87);
+    overflow-y:scroll;
 }
 
 h2.subTitle{
